fixed scroll button spacing

--- a/src/views/Home.module.css
+++ b/src/views/Home.module.css
@@ -282,11 +282,11 @@ img {
 }
 
 .scrollDownBox2 {
+	position: absolute;
+	bottom: -100%;
   border: 1px solid white;
   width: 50px;
   align-self: center;
-  margin-top: 34vh;
-  margin-bottom: 10px;
   text-align: center;
   animation: 2s ease-in-out 0s infinite bounce;
   cursor: pointer;
@@ -298,11 +298,11 @@ img {
 }
 
 .scrollDownBox3 {
+	position: absolute;
+	bottom: -200%;
   border: 1px solid white;
   width: 50px;
   align-self: center;
-  margin-top: 20vh;
-  margin-bottom: 10px;
   text-align: center;
   animation: 2s ease-in-out 0s infinite bounce;
   cursor: pointer;
@@ -314,11 +314,12 @@ img {
 }
 
 .scrollDownBox4 {
+	position: absolute;
+	bottom: -300%;
   border: 1px solid white;
   width: 50px;
   align-self: center;
   text-align: center;
-	margin-top: 20px;
   animation: 2s ease-in-out 0s infinite bounce;
   cursor: pointer;
   border-radius: 5px;
